# when-flight-api

./: .gitlab-ci.yml  Dockerfile  README.md  Readme.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/api/routers/: flight.py  ping.py
app/common/: lifetime.py  types.py
app/core/: config.py  external.py  lifespan.py  redis.py  tags.py
app/dependencies/: flight.py
app/error/: external.py  flight.py
app/infrastructure/: external_api.py  redis.py
app/schemas/: external.py  flight.py
app/service/: flight.py
